Fixed rendering issues on Firefox and mobile

--- a/assets/_less/application.less
+++ b/assets/_less/application.less
@@ -83,8 +83,10 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   right: 0;
   text-transform: uppercase;
+  background-color:rgba(255,255,255,0.75);
 
   @media (min-width: 768px){
+    background-color:rgba(255,255,255,0);
     .nav {
 
       float: none;
